include/starpu_worker.h


unsigned starpu_worker_get_count(void);
unsigned starpu_cpu_worker_get_count(void);
unsigned starpu_cuda_worker_get_count(void);
unsigned starpu_opencl_worker_get_count(void);
int starpu_worker_get_id(void);
unsigned _starpu_worker_get_id_check(const char *f, int l);
unsigned starpu_worker_get_id_check(void);
#define starpu_worker_get_id_check() _starpu_worker_get_id_check(__FILE__, __LINE__)
int starpu_worker_get_bindid(int workerid);
void starpu_worker_set_going_to_sleep_callback(void (*callback)(unsigned workerid));
void starpu_worker_set_waking_up_callback(void (*callback)(unsigned workerid));
unsigned starpu_combined_worker_get_count(void);
unsigned starpu_worker_is_combined_worker(int id);
int starpu_combined_worker_get_id(void);