include/starpu.h

struct starpu_conf
{
	int magic;
	const char *sched_policy_name;
	struct starpu_sched_policy *sched_policy;
	int ncpus;
	int ncuda;
	int nopencl;
	int nmic;
	int nscc;
	unsigned use_explicit_workers_bindid;
	unsigned workers_bindid[STARPU_NMAXWORKERS];
	unsigned use_explicit_workers_cuda_gpuid;
	unsigned workers_cuda_gpuid[STARPU_NMAXWORKERS];
	unsigned use_explicit_workers_opencl_gpuid;
	unsigned workers_opencl_gpuid[STARPU_NMAXWORKERS];
	unsigned use_explicit_workers_mic_deviceid;
	unsigned workers_mic_deviceid[STARPU_NMAXWORKERS];
	unsigned use_explicit_workers_scc_deviceid;
	unsigned workers_scc_deviceid[STARPU_NMAXWORKERS];
	int bus_calibrate;
	int calibrate;
	int single_combined_worker;
	char *mic_sink_program_path;
	int disable_asynchronous_copy;
	int disable_asynchronous_cuda_copy;
	int disable_asynchronous_opencl_copy;
	int disable_asynchronous_mic_copy;
	unsigned *cuda_opengl_interoperability;
	unsigned n_cuda_opengl_interoperability;
	struct starpu_driver *not_launched_drivers;
	unsigned n_not_launched_drivers;
	unsigned trace_buffer_size;
};
int starpu_conf_init(struct starpu_conf *conf);
int starpu_init(struct starpu_conf *conf) STARPU_WARN_UNUSED_RESULT;
int starpu_initialize(struct starpu_conf *user_conf, int *argc, char ***argv);
void starpu_pause(void);
void starpu_resume(void);
void starpu_shutdown(void);
void starpu_topology_print(FILE *f);
int starpu_asynchronous_copy_disabled(void);
int starpu_asynchronous_cuda_copy_disabled(void);
int starpu_asynchronous_opencl_copy_disabled(void);
int starpu_asynchronous_mic_copy_disabled(void);
void starpu_display_stats();
void starpu_get_version(int *major, int *minor, int *release);